// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule attribute-boolean-style configured with "empty" smoketest 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "test-files/rules/attribute-boolean-style.html",
    "messages": [
      {
        "column": 8,
        "line": 1,
        "message": "Attribute "disabled" value should be empty string",
        "offset": 7,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(1)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 3,
        "message": "Attribute "disabled" value should be empty string",
        "offset": 44,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(3)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 4,
        "message": "Attribute "disabled" value should be empty string",
        "offset": 72,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(4)",
        "severity": 2,
        "size": 8,
      },
    ],
    "source": "<input disabled>
<input disabled="">
<input disabled="required">
<input disabled="foobar">
",
    "warningCount": 0,
  },
]
`;

exports[`rule attribute-boolean-style configured with "name" smoketest 1`] = `
[
  {
    "errorCount": 4,
    "filePath": "test-files/rules/attribute-boolean-style.html",
    "messages": [
      {
        "column": 8,
        "line": 1,
        "message": "Attribute "disabled" should be set to disabled="disabled"",
        "offset": 7,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(1)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 2,
        "message": "Attribute "disabled" should be set to disabled="disabled"",
        "offset": 24,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(2)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 3,
        "message": "Attribute "disabled" should be set to disabled="disabled"",
        "offset": 44,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(3)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 4,
        "message": "Attribute "disabled" should be set to disabled="disabled"",
        "offset": 72,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(4)",
        "severity": 2,
        "size": 8,
      },
    ],
    "source": "<input disabled>
<input disabled="">
<input disabled="required">
<input disabled="foobar">
",
    "warningCount": 0,
  },
]
`;

exports[`rule attribute-boolean-style configured with "omit" smoketest 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "test-files/rules/attribute-boolean-style.html",
    "messages": [
      {
        "column": 8,
        "line": 2,
        "message": "Attribute "disabled" should omit value",
        "offset": 24,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(2)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 3,
        "message": "Attribute "disabled" should omit value",
        "offset": 44,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(3)",
        "severity": 2,
        "size": 8,
      },
      {
        "column": 8,
        "line": 4,
        "message": "Attribute "disabled" should omit value",
        "offset": 72,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "input:nth-child(4)",
        "severity": 2,
        "size": 8,
      },
    ],
    "source": "<input disabled>
<input disabled="">
<input disabled="required">
<input disabled="foobar">
",
    "warningCount": 0,
  },
]
`;

exports[`rule attribute-boolean-style should contain documentation 1`] = `
{
  "description": "Require a specific style when writing boolean attributes.",
  "url": "https://html-validate.org/rules/attribute-boolean-style.html",
}
`;
